# trader_grpc

./: Cargo.toml  Dockerfile  build.rs
.agent/rules/: architecture.md  code-guidelines.md  refactor.md  security.md  styling.md
.agent/skills/ui-styling-only/: SKLL.md
.agent/workflows/: add-feature.md  audit.md  performance.md
.github/workflows/: docker-publish.yml
config/: default.toml
grpcurl/: commands.http
proto/: depot.proto  indicators.proto
src/: error.rs  lib.rs  main.rs  settings.rs
src/broker/: actions.rs  evaluator.rs  mod.rs  position_sizing.rs
src/db/: client.rs  mod.rs  models.rs
src/decisions/: mod.rs  random_action.rs  rustc-ice-2025-12-09T19_33_59-196936.txt
src/grpc_depot/: init.rs
src/indicator_client/: init.rs
src/mocking/: mock.rs
src/pattern/: cross_gc_dc.rs  mod.rs
src/wrangling/: buffers.rs
test/: actions.rs
